# GKlib

./: CMakeLists.txt  gk_adapt.c  gk_adapt.h  gk_arch.h
test/: gkuniq.c
win32/: adapt.h
